--- a/convnets.ipynb
+++ b/convnets.ipynb
@@ -5596,10 +5596,10 @@
     "\n",
     "|                   |section 4|section 5|section 6|section 8|\n",
     "|:------------------|--------:|--------:|--------:|--------:|\n",
-    "|train loss         |1.427591 |1.026594 |0.920773 |0.495025 |\n",
-    "|Validation Loss    |1.439288 |1.269284 |1.121373 |0.548066 |\n",
-    "|Train Accuracy     |0.51     |0.64     |0.68     |0.83     |\n",
-    "|Validation Accuracy|0.4949   |0.5814   |0.6298   |0.7943   |\n",
+    "|train loss         |1.431482 |1.028003 |0.947686 |0.492020 |\n",
+    "|Validation Loss    |1.453759 |1.186043 |1.030923 |0.548066 |\n",
+    "|Train Accuracy     |0.51     |0.64     |0.67     |0.83     |\n",
+    "|Validation Accuracy|0.4870   |0.6053   |0.6441   |0.8045   |\n",
     "|epoch number       |3        |5        |5        |5        |\n"
    ]
   },
@@ -8566,6 +8566,39 @@
    "source": [
     "# Question 6\n",
     "More powerful models were proposed after AlexNet, one of them is known as the VGG model (see code here https://github.com/soumith/imagenet-multiGPU.torch/blob/master/models/vggbn.lua), another one is the GoogLenet model (see code here https://github.com/soumith/imagenet-multiGPU.torch/blob/master/models/googlenet.lua). Describe here in one paragraph each, what are the architectural differences and innovations that you notice with respect to the AlexNet model (e.g. more layers? how many more? more filters? bigger convolutional filters? smaller convolutional filters? Just by looking at the code can you estimate which model occupies more memory VGG or GoogLenet?)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alexnet:\n",
+    "Conv: 3, 64, 11, 11\n",
+    "Conv: 64, 192, 5, 5\n",
+    "Conv: 192, 384, 3, 3\n",
+    "Conv: 384, 256, 3, 3\n",
+    "Conv: 256, 256, 3, 3\n",
+    "\n",
+    "Linear: 9216 -> 4096\n",
+    "Linear: 4096 -> 4096\n",
+    "Linear: 4096 -> 1000\n",
+    "\n",
+    "\n",
+    "1: \n",
+    "VGG: I am looking at modelType = 'A'. \n",
+    "In this model, it has 8 convolution layers and 3 Linear layers.\n",
+    "AlexNet only has 5 convolution layers and 3 Linear layers.\n",
+    "VGG model has 64+128+256+256+512+512+512+512 = 2752 filters.\n",
+    "AlexNet has 64+192+384+256+256 = 1152 filters.\n",
+    "In VGG model, all filters has a size of 3x3. \n",
+    "AlexNet has some bigger filters sizes than VGG, the biggest filter has a size of 11x11(11*11*size of input channels), and the smallest filter has a size of 3x3(3*3*size of input channels).\n",
+    "\n",
+    "\n",
+    "2:\n",
+    "In GoogLenet, each call of inception function adds 5~7 convolution layers. There is a total of 72 convolution layers and 3 Linear layers.\n",
+    "GoogLenet has 11616 filters(I did math on paper). Each filters has a size from 1x1 to 7x7, but most of them has a size of 3x3 and 1x1.\n",
+    "\n",
+    "Since GoogLenet has much more convolution layers and filters than VGG and the weight it calculated (by # of filters x the size of filters), so GoogLenet takes more memory. "
    ]
   },
   {
